# qaren

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  dist-workspace.toml  m1.env  m2.env  notes  performsnce-test-result  qaren-feedback  user-test.txt  user-test2.txt  user-test3.txt
.agents/rules/: decoupled-architecture-iterative-output.md  production-grade-safety-zero-panics.md  strict-dependency-control-zero-cost-abstractions.md
.github/: CODEOWNERS
.github/workflows/: release.yml
docs/: Fix_Homework.txt  PRD.md  Project Brief: Qaren Desktop Application  README.ar.md  README.de.md  README.fa.md  README.fr.md  README.ja.md  README.ru.md  README.zh.md  design.md  requirements.md  tasks.md
qaren-cli/: Cargo.toml  README.md
qaren-cli/src/: commands.rs  config.rs  examples.rs  main.rs  masking.rs  output.rs
qaren-cli/tests/: cli_tests.rs
qaren-core/: Cargo.toml  README.md
qaren-core/src/: diff.rs  directory.rs  error.rs  lib.rs  masking.rs  parser.rs  patch.rs  types.rs
qaren-core/tests/: chaos_audit.rs
qaren-gui/: Cargo.toml
qaren-gui/src/: app.rs  main.rs  masking.rs  settings.rs  theme.rs
release_v0.1.0/: qaren-linux-amd64
release_v0.2.0/: qaren
release_v0.3.0/: qaren
release_v0.3.1/: LICENSE  qaren
release_v0.3.2/: qaren
release_v0.3.4/: README.md  qaren
release_v0.3.5/: qaren
release_v0.3.6/: README.md  qaren
scratch/: chaos_masking_1.env  chaos_parser_1.env  d.env  diff-comand.text  non_utf8.env  prod.env  qaren.env  staging.env
scratch.backup/: chaos_json_1.env  chaos_json_2.env  chaos_masking_2.env  prod.env  script1.sh  script2.sh  staging.env
scratch.backup/patches/: orphan.env
scratch.backup/prod/app1/: .env
scratch/patches/app1/: .env
scratch/staging/app1/: .env
scripts/: install.sh
technical_docs/: README.md  cli-reference.md  installation.md
technical_docs/commands/: config.md  diff.md  kv.md
technical_docs/concepts/: qaren-vs-posix-diff.md
technical_docs/guides/: automation-and-cicd.md
