[package]
name = "qaren-cli"
version = "0.1.0"
edition = "2021"
description = "CLI application for Qaren configuration comparison tool"

[[bin]]
name = "qaren"
path = "src/main.rs"

[dependencies]
qaren-core = { path = "../qaren-core" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
similar = "3.1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
