[package]
name = "qaren"
version = "0.2.0"
edition = "2021"
authors = ["Aly Esmaeil<alyesmaeil.g@gmail.com>"]
description = "A blazingly fast, secure, offline configuration comparison tool."
repository = "https://github.com/yourusername/qaren"
license = "MIT"
keywords = ["cli", "diff", "devops", "env", "configuration"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "qaren"
path = "src/main.rs"

[dependencies]
qaren-core = { path = "../qaren-core" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
similar = "3.1.0"
clap_complete = "4.6.2"
serde_json = "1.0.149"
rayon = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
