[package]
name = "qaren-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Qaren configuration comparison tool"

[dependencies]
thiserror = "2.0"
similar = "2.6"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.8"
