[package]
name = "qaren-core"
version = "1.0.0"
edition = "2021"
authors = ["Aly Esmaeil<alyesmaeil.g@gmail.com>"]
description = "Core library for Qaren configuration comparison tool"
repository = "https://github.com/qaren-cli/qaren.git"
license = "MIT"
readme = "README.md"

[dependencies]
thiserror = "2.0"
similar = "2.6"
serde = { version = "1.0.228", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.8"
