[package]
name = "qaren-gui"
version = "0.1.0"
edition = "2021"
description = "GUI application for Qaren configuration comparison tool"

[[bin]]
name = "qaren-gui"
path = "src/main.rs"

[dependencies]
qaren-core = { path = "../qaren-core" }
eframe = "0.31"
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
rfd = "0.15"
